// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSeparator renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Today"
    class="mx_DateSeparator"
    role="separator"
    tabindex="-1"
  >
    <hr
      role="none"
    />
    <h2
      aria-hidden="true"
    >
      Today
    </h2>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSeparator when feature_jump_to_date is enabled renders the date separator correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Fri, Dec 17 2021"
    class="mx_DateSeparator"
    role="separator"
    tabindex="-1"
  >
    <hr
      role="none"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Jump to date"
      class="mx_AccessibleButton mx_DateSeparator_jumpToDateMenu"
      role="button"
      tabindex="0"
    >
      <h2
        aria-hidden="true"
      >
        Fri, Dec 17 2021
      </h2>
      <div
        class="mx_DateSeparator_chevron"
      />
    </div>
    <hr
      role="none"
    />
  </div>
</DocumentFragment>
`;
